--- a/webpack/heart-webpack-complete/src/App.css
+++ b/webpack/heart-webpack-complete/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 1s linear;
   height: 80px;
 }
 
@@ -11,7 +11,8 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
+  /* color: white; */
+  color: purple;
 }
 
 .App-intro {
@@ -19,6 +20,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
